Refactor workflow services to improve null handling and enhance shutdown procedures